In kpanel-0.18:

    Patchlevel 0:
       - new icons 
       - visual changes to work well with the new icons
          * better scaling (no longer scale_factor). Uses the mini
            versions of the icons if those are better
          * styles corrected: tiny uses mini-versions, small/larger
            use the full versions of the icons (without any scaling)
          * less frames around the control group if margin==0
            (used in the tiny and the small style)
          * all pushButtons separated with at least one pixel
          * motif style button fixed
          * minipanel uses flat buttons
          * generated stipple pixmap with arrows for the panel button
          * few more changes
       - standalone panel button always on top
       - date label automatically removes the month-information if it
         is too large. A tooltip gives the full information.
       - small style removed: This is normal style, now.  


In kpanel-0.18:
 
    Patchlevel 9:
       ..............

    Patchlevel 8:
       - logout while editing desktop buttons fixed.
       - new option: PersonalFirst=on/off
         Also setable from the Go!->Panel->Configure dialog
         (which will nevertheless dissappear soon)
       - no longer menu-tooltips if you use the keyboard

    Patchlevel 7:
       - alternate sorting order: folders first (Michael Bialas)
         This is default now. You can disable it with
             FoldersFirst=off
         in the kpanelrc
       - cosmectic problem with my pushbuttons fixed
       - small bugfix for minipanel which refused to appear sometimes...
       - cosmetic fix for folder icons

    Patchlevel 6:
       - menu sorting fixed (thanks to Michael Bialas)
         Please note that the sort order can individually changed
         for each menu with kmenuedit.
       - a workaround for swallowed windows on buttons.
         Unfortunatly there is a severe problem with qt-1.3. I am